/// A placeholder class that represents an entity or model.
class SampleItem {
  final int id;

  const SampleItem(this.id);

  
}
